# CVHackerCPP

./: .gitignore  README.md  build.sh  configure.sh  install.sh  run.sh  uninstall.sh
homework_1/: CMakeLists.txt  compile_commands.json
homework_1/task_2/arithmetic/: CMakeLists.txt
homework_1/task_2/arithmetic/ipb_arithmetic/: subtract.cpp  sum.cpp
homework_1/task_2/src/: main.cpp  modernCPPForCV.h.in
